2002-09-23  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* Toolbar_pimpl.C (layoutSelected): show shortcut in minibuffer
	when selecting an environment from the toolbar

2002-08-21  John Levon  <levon@movementarian.org>

	* forms/form_thesaurus.fd: fix Escape to close dialog
 
2002-06-27  Juergen Spitzmueller <j.spitzmueller@gmx.de>

	* forms/form_float.fd
	* FormFloat.C: Add checkbox to set default float settings (fix #394).

2002-08-16  Michael Schmitt  <Michael.Schmitt@teststep.org>

	* FormRef.C (update): fix bug in the cross reference dialog which
	has the effect that the buffer choice and the list of labels are
	not synchronized if you re-open the dialog.

2002-07-18  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* xformsGImage.C (init_graphics): disable handling of ps files in
	xforms loader

2002-07-11  Herbert Voss  <voss@perce.de>

	* FormGraphics.C (input): test also the height for %-value, when
	importing the latex-value into the lyx-view

2002-07-10  Andrew Zabolotny  <zap@cobra.ru>

	* combox.C (peek_event): 
	* DropDown.C (peek): support keypad keys

2002-06-27  Juergen Spitzmueller <j.spitzmueller@gmx.de>

	* FormInclude.C: Comment out unneeded and wrong update mechanism
	(related to bug #459)

	* forms/form_include.fd: define missing callbacks (bug #459)

2002-07-03  Vitaly Lipatov  <LAV@VL3143.spb.edu>

	* FormDocument.C (build): add pt154 encoding

2002-05-17  Herbert Voss  <voss@lyx.org>

	* FormGraphics.C: change a comment-text

	* xforms_helpers.h: add the forgotten vertical relative Lengths
	pheight (paperheight) and theight (textheight). The short form
	is to prevent crashes in fact of the static choice-width in
	some GUI's.

2002-06-18  John Levon  <moz@compsoc.man.ac.uk>

	* FormSearch.h:
	* FormSearch.C: highlight the search on opening
	  the dialog (bug 77)
 
2002-06-17  Angus Leeming  <leeming@lyx.org>

	* Toolbar_pimpl.[Ch] (setTooltips): new method. A quick and dirty hack