@@ -39,6 +39,8 @@ What's new
 
 ** Bug fixes
 
+- the reference dialog now lists the labels of the current buffer.
+
 - fix bug where special characters in equations label confuse LyX
   (this was a new bug in 1.2.1)
 
