@@ -1,3 +1,7 @@
+2002-10-09  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* FormRef.C (update): Always list the labels of the current buffer.
+
 2002-09-23  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
 
 	* Toolbar_pimpl.C (layoutSelected): show shortcut in minibuffer
